--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,19 @@
   text-align: center;
 }
 
+.not-found h1 {
+  font-size: 2.5rem;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.hidden {
+  opacity: 0; 
+}
+
+.visible {
+  opacity: 1; 
+}
+
 .not-found img {
   max-width: 300px;
   margin: 20px 0;
