--- a/src/App.css
+++ b/src/App.css
@@ -38,12 +38,12 @@
 .navbar {
   display: flex;
   justify-content: center;
-  background-color: #333; 
+  background-color: #002244; 
   padding: 15px 0;
 }
 
 .navbar a {
-  color: white;
+  color: #ffd700; 
   text-decoration: none;
   padding: 10px 20px;
   font-size: 1.2rem;
@@ -51,7 +51,7 @@
 }
 
 .navbar a:hover {
-  background-color: #555;
+  background-color: #ff8400; 
   border-radius: 5px;
 }
 
