--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,6 @@
 }
 
 .intro h2 {
-  color: #333;
   font-size: 2rem;
   margin-bottom: 10px;
 }
@@ -107,6 +106,8 @@
   margin: 40px auto;
   padding: 20px;
   border-radius: 10px;
+  border-left: 5px solid #ffd700; 
+  border-right: 5px solid #ffd700;
 }
 
 .quick-facts ul {
