--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,6 @@
 
 .intro p {
   font-size: 1.2rem;
-  color: #444;
 }
 
 .quick-facts {
@@ -108,6 +107,7 @@
   border-radius: 10px;
   border-left: 5px solid #ffd700; 
   border-right: 5px solid #ffd700;
+  font-size: 1.2rem;
 }
 
 .quick-facts ul {
@@ -115,6 +115,7 @@
   padding: 0;
   display: inline-block; 
   text-align: left; 
+  font-size: 1.2rem;
 }
 
 .about h1 {
