--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 .about img {
   max-width: 300px;
   margin: 20px 0;
-  border: 5px solid #FDB913; 
+  border: 5px solid #004C98; 
   border-radius: 10px;
 }
 
