--- a/src/App.css
+++ b/src/App.css
@@ -25,45 +25,53 @@
 
 .about {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #A50044; 
-  color: #004C98; 
   text-align: center;
+  color: white;
+  background: linear-gradient(to right, #A50044 50%, #004C99 50%);
   padding: 20px;
+}
+
+.about-content {
+  max-width: 800px;
+  text-align: center;
 }
 
 .about h1 {
   font-size: 3rem;
-  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.about p {
+  font-size: 1.5rem;
+  max-width: 700px;
 }
 
 .about img {
   max-width: 300px;
   margin: 20px 0;
-  border: 5px solid #004C98; 
+  border: 5px solid white;
   border-radius: 10px;
 }
+
 
 .personal-story {
   max-width: 700px;
   text-align: center;
   margin-top: 20px;
   padding: 15px;
-  border-left: 5px solid #004C98; 
-  border-right: 5px solid #004C98;
 }
 
 .personal-story h2 {
-  color: #004C98;
+  color: white;
   font-size: 2rem;
 }
 
 .personal-story p {
   font-size: 1.2rem;
-  color: #004C98
+  color: white;
 }
 
 .navbar {
