--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 
 .about {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -51,9 +52,15 @@
 
 .about img {
   max-width: 300px;
-  margin: 20px 0;
+  margin: 20px auto; 
   border: 5px solid white;
   border-radius: 10px;
+  display: block;
+}
+
+.text-container {
+  text-align: center;
+  margin-top: 20px;
 }
 
 
