--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,7 @@
 .live-scores {
   text-align: center;
   padding: 40px 20px;
-  background-color: #121212; 
+  background-color: #221f1f; 
   color: #ff4081; 
   min-height: 100vh;
 }
